# KuraOS

./: .air.toml  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  docker-compose.dev.yml  go.mod  go.sum  out.css  pyproject.toml  replace_rgba.py  replace_rgba2.py  test.html
.antigravitycli/: 6f6a2113-c361-4012-82f4-2788cf0b9690.json
.claude/: settings.json
.cursor/rules/: go-storage.mdc  kuraos.mdc
axis/core/: config.py  main.py  router.py
axis/inference/: cloud_client.py  hardware_detect.py  ollama_client.py
axis/mcp/: tools.py
axis/rag/: pipeline.py
backend/cmd/kura-daemon/: main.go
backend/pkg/exec/: run.go
configs/templates/: exports.tmpl  smb.conf.tmpl  sssd.conf.tmpl
docs/: Architectural Plan.md
frontend/: components.json  out.css  package-lock.json  package.json  test.css  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
installer/: install.sh
installer/systemd/: axis-engine.service  kura-daemon.service  kura-helper.service
roadmap/: plan-settings-01-appearance.md  plan-settings-02-network.md  plan-settings-03-smb-shares.md  plan-settings-04-online-accounts.md  plan-settings-05-power.md  plan-settings-06-apps-services.md  plan-settings-07-search.md  plan-settings-08-notifications.md  plan-settings-09-axis-ai.md  plan-settings-10-users.md  plan-settings-11-security.md  plan-settings-12-ssh.md  plan-settings-13-region-lang.md  plan-settings-14-datetime.md  plan-settings-15-remote-desktop.md  plan-settings-16-updates.md  plan-settings-master.md  storage-app-redesign.md
scripts/: dev-server.sh  dev.sh  setup-server.sh
(+79 files in other folders)
