[project]
name = "axis"
version = "0.1.0"
description = "KuraOS AI engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
    "pillow>=10.3",
    "imagehash>=4.3",
    "pytesseract>=0.3",
]
accel-intel = [
    "openvino>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["axis"]
